--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
-<title>铜鲜是个智障</title>
-<body>今天学习了吗？</body>
+  <title>铜鲜是个智障</title>
+  <body>
+    <div align="center">
+      今天学习了吗？
+      <iframe scrolling="no" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=36&icon=5&num=5"></iframe>
+    </div>
+  </body>
 </html>
