--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <title>铜鲜是个智障</title>
   <body>
-    <div align="center">
+    <div>
+      <iframe width="280" scrolling="no" height="25" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=34&icon=1&num=3"></iframe>
       今天学习了吗？
     </div>
   </body>
