--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <title>铜鲜是个智障</title>
   <body>
     <div>
-      <iframe width="280" scrolling="no" height="25" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=34&icon=1&num=3"></iframe>
+     <iframe id="fancybox-frame" name="fancybox-frame1508684772632" frameborder="0" scrolling="no" hspace="0"  src="http://i.tianqi.com/index.php?c=code&a=getcode&id=35&h=55&w=200"></iframe>
+      
       今天学习了吗？
     </div>
   </body>
