--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
   <title>铜鲜是个智障</title>
   <body>
-    <div>
-     <iframe id="fancybox-frame" name="fancybox-frame1508684772632" frameborder="0" scrolling="no" hspace="0"  src="http://i.tianqi.com/index.php?c=code&a=getcode&id=35&h=55&w=200"></iframe>
-      
-      今天学习了吗？
+    <div align="center">
+        <iframe id="fancybox-frame" name="fancybox-frame1508684772632" frameborder="0" scrolling="no" hspace="0"  src="http://i.tianqi.com/index.php?c=code&a=getcode&id=35&h=55&w=200"></iframe>
     </div>
   </body>
 </html>
