--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>铜鲜是个智障</title>
   <body>
     <div align="center">
-        <iframe id="fancybox-frame" name="fancybox-frame1508684772632" frameborder="0" scrolling="no" hspace="0"  src="http://i.tianqi.com/index.php?c=code&a=getcode&id=35&h=55&w=200"></iframe>
+            是不是傻逼？    
     </div>
   </body>
 </html>
