--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>铜鲜是个智障</title>
   <body>
-    <div align="center">
+    <div align="center" margin-top:500px>
             是不是傻逼？    
     </div>
   </body>
