--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>铜鲜是个智障</title>
   <body>
     <div align="center" margin-top:500px>
+      <iframe width="225" scrolling="no" height="80" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=8&icon=1&py=xiqing&num=2&site=12"></iframe>
             是不是傻逼？    
     </div>
   </body>
