--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
-  <title>铜鲜是个智障</title>
+  <head>
+    <title>铜鲜是个智障</title>
+    <style type="text/css">
+      div{margin-top:500px;align:center;}
+    </style>
+  </head>
   <body>
-    <div align="center" margin-top:500px>
+    <div>
       是不是傻逼？    
     </div>
   </body>
