--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>铜鲜是个智障</title>
     <style type="text/css">
-      div{margin-top:500px;align:center;}
+      div{margin-top:250px;text-align:center;}
     </style>
   </head>
   <body>
