--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>铜鲜是个智障</title>
+    <title>铜鲜打开了浏览器</title>
     <style type="text/css">
       div{margin-top:250px;text-align:center;}
     </style>
   </head>
   <body>
     <div>
-      铜鲜打开了自己的浏览器~
+      铜鲜会成为一个男神
     </div>
   </body>
 </html>
