--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>铜鲜打开了浏览器</title>
+    <title>铜鲜觉得</title>
     <style type="text/css">
       div{margin-top:250px;text-align:center;}
     </style>
   </head>
   <body>
     <div>
-      铜鲜会成为一个男神
+      铜鲜生来就是一个男神
     </div>
   </body>
 </html>
