--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>铜鲜觉得</title>
     <style type="text/css">
-      div{margin-top:250px;text-align:center;font-size:20px;}
+      div{margin-top:250px;text-align:center;font-size:8vw;}
     </style>
   </head>
   <body>
