--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>铜鲜觉得</title>
+    <title>铜鲜</title>
     <style type="text/css">
       div{margin-top:250px;text-align:center;font-size:6vw;}
     </style>
   </head>
   <body>
     <div>
-      文雅延军是两个大美女
+      18736193737
     </div>
   </body>
 </html>
