--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       微信公众号：个人博客计划<br>
       微博：https://weibo.com/tongxianma<br>
       Twitter：https://twitter.com/tongxianma<br>
+      Facebook：https://facebook.com/tongxianma
     </div>
   </body>
 </html>
