--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style type="text/css">
       div{margin-top:250px;text-align:center;font-size:3vw;}
     </style>
+    <script>
   function IsPC(){  
     var userAgentInfo = navigator.userAgent;
     var Agents = new Array("Android", "iPhone", "SymbianOS", "Windows Phone", "iPad", "iPod");  
@@ -18,6 +19,7 @@
       //alert(navigator.userAgent);  
       window.location.href ="pc.html";
   } 
+      </script>
   </head>
   <body>
     <div>
