--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div>
       
       <img src="wx.jpg">
-      <img src="wp.jpg">
-      <a href="https://weibo.com/tongxianma">Weibo</a>      
-      <a href="https://twitter.com/tongxianma">Twitter</a>
+      <img src="mp.jpg"><br>
+      <a href="https://weibo.com/tongxianma">Weibo</a>&nbsp;      
+      <a href="https://twitter.com/tongxianma">Twitter</a>&nbsp;
       <a href="https://facebook.com/tongxianma">Facebook</a>
     </div>
   </body>
