--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     
     <style type="text/css">  
       a:link {
-       font-size: 12px;
+       font-size:3vw;
        color: #000000;
        text-decoration: none;
       }
       a:visited {
-       font-size: 12px;
+       font-size:3vw;
        color: #000000;
        text-decoration: none;
       }
       a:hover {
-       font-size: 12px;
+       font-size:3vw;
        color: #999999;
        text-decoration: underline;
       }  
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div>
-      
+      QQ/Phone:18736193737<br>
       <img src="wx.jpg">
       <img src="mp.jpg"><br>
       <a href="https://weibo.com/tongxianma">Weibo</a>&nbsp;      
