--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   </head>
   <body>
     <div>
-      QQ/Phone:18736193737<br>
       <img src="wx.jpg">
       <img src="mp.jpg"><br>
+      <a href="https://user.qzone.qq.com/1152615532">Qzone</a>&nbsp; 
       <a href="https://weibo.com/tongxianma">Weibo</a>&nbsp;      
       <a href="https://twitter.com/tongxianma">Twitter</a>&nbsp;
       <a href="https://facebook.com/tongxianma">Facebook</a>
