--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div>
-      <img src="wx.jpg">
+      <img src="wx.jpg">&nbsp;
       <img src="mp.jpg"><br>
       <a href="https://user.qzone.qq.com/1152615532">Qzone</a>&nbsp; 
       <a href="https://weibo.com/tongxianma">Weibo</a>&nbsp;      
