--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        color: #999999;
        text-decoration: underline;
       }  
-      div{margin-top:250px;text-align:center;font-size:3vw;}
+      div{margin-top:30vh;text-align:center;font-size:3vw;}
     </style>
   </head>
   <body>
