--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </style>
   </head>
   <body>
+    <!--...
     <div>
       <img src="wx.jpg">&nbsp;
       <img src="mp.jpg"><br>
@@ -29,6 +30,10 @@
       <a href="https://weibo.com/tongxianma">Weibo</a>&nbsp;      
       <a href="https://twitter.com/tongxianma">Twitter</a>&nbsp;
       <a href="https://facebook.com/tongxianma">Facebook</a>
+    </div>
+    -->
+    <div>
+      中山大学
     </div>
   </body>
 </html>
